Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18973

MGC on MGS doesn't configure any failover nodes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      MGC started on MGS uses always single peer @lo no matter what other services are running on the same node. That leads to situation when MGS is failed over then no services on primary node are able to reach it.

      Solution is to account all 'mgsnode' parameters parsed in lustre_start_mgc() from any user of MGC and adding them to MGC import

      Attachments

        Activity

          People

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: